syntax = "proto3";

package testutil.things.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/redpanda-data/console/backend/pkg/testutil/testdata/proto/gen/things/v1";

message Widget {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
}
